--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ts-node src/index.ts",
-    "dev": "nodemon --exec \"ts-node src/index.ts --dev\""
+    "build": "ts-node src/index.ts"
   },
   "author": {
     "name": "Christian Koop",
@@ -28,13 +27,13 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "purgecss": "^4.0.2"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
     "@types/ejs": "^3.0.6",
     "@types/node": "~14.14.32",
-    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
