--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "url": "https://github.com/SpraxDev/HEMS-Skulpturengarten/issues"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
   },
   "dependencies": {
     "ejs": "^3.1.6",
     "purgecss": "^4.0.3"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.1",
+    "@tsconfig/node16": "^1.0.2",
     "@types/ejs": "^3.1.0",
-    "@types/node": "~14.18.12",
+    "@types/node": "^16.11.26",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
